--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
   <div class="game-board">
     <img src="./images/clouds.png" class="clouds">
-    <img src="./images/mario.gif" class="mario">
-    <img src="./images/pipe.png" class="pipe">   
-    <button class="restart">Reiniciar</button>
-    <span class="warning-msg">O BOTÂO DE REINICIAR AINDA NÂO FUNCIONA</span>
+    <img src="./images/marioinicio.png" class="mario">
+    <img src="./images/pipe.png" class="pipe">
   </div>
+    <p class="textStart">Dê um clique para iniciar</p>
+    <p class="points">Pontuação: <span id="contador">0</span></p>
 </body>
 <script src="./js/script.js"></script>
 </html>
